--- a/Demo/default.htm
+++ b/Demo/default.htm
@@ -5,15 +5,33 @@
     <meta charset="utf-8" />
     <title>TypeScript HTML App</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
+    <script src="scripts/libs/jquery-1.9.1.min.js"></script>
+    <script src="scripts/libs/sammy-0.7.4.min.js"></script>
+    <script src="scripts/libs/knockout-2.2.1.js"></script>
     <script src="app.js" defer="defer"></script>
 </head>
 <body>
     <h1>TypeScript HTML App</h1>
 
-    <ul data-bind="foreach: logs">
-        <li data-bind="text: message"></li>
+    <ul data-bind="foreach: logs, visible: selected() == null">
+        <li data-bind="text: message, click: $parent.select"></li>
     </ul>
+    
+    <div data-bind="with: selected">
+        <dd>
+            <dt>Id</dt>
+            <dl data-bind="text: id"></dl>
+            <dt>Event Date</dt>
+            <dl data-bind="text: eventDate"></dl>
+            <dt>Level</dt>
+            <dl data-bind="text: level"></dl>
+            <dt>Message</dt>
+            <dl data-bind="text: message"></dl>
+            <dt>App Domain</dt>
+            <dl data-bind="text: appDomain"></dl>
+            <dt>Thread</dt>
+            <dl data-bind="text: thread"></dl>
+        </dd>
+    </div>
 </body>
 </html>
